# legacy-well-risk-assessment

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  NOTICE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: architecture.md  assumptions.md  limitations.md  methodology.md  references.md  scientific_review.md
examples/: assess_single_well.py  screen_portfolio.py  well_template.json
src/lwra/: __init__.py  sample_data.py
src/lwra/api/: __init__.py  main.py
src/lwra/config/: __init__.py  enums.py  thresholds.yaml  weights.yaml
src/lwra/dashboard/: __init__.py  app.py
src/lwra/integrity_engine/: __init__.py  _scoring.py  aggregator.py  barrier_eval.py  cement.py  mechanical.py  plugging.py
src/lwra/models/: __init__.py  barrier.py  enums.py  results.py  well.py
src/lwra/recommendation_engine/: __init__.py  _config.py  recommender.py
src/lwra/reports/: __init__.py  _common.py  excel_report.py  json_report.py  pdf_report.py
src/lwra/risk_engine/: __init__.py  categories.py  robustness.py  scorer.py  weighting.py
src/lwra/services/: __init__.py  pipeline.py
src/lwra/visualizations/: __init__.py  _theme.py  bars.py  gauges.py  heatmap.py  radar.py
tests/: conftest.py  test_api.py  test_core_scoring.py  test_pipeline.py  test_robustness.py
